--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -934,6 +934,22 @@ Ensure the default browser behavior of the `hidden` attribute.
   --brand-color: #44ab2a;
 }
 
+::-webkit-scrollbar {
+  z-index: 99999;
+}
+
+::-webkit-scrollbar-track {
+  background: #e7e7e7;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #8a8a8a;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #6a6a6a;
+}
+
 .section {
   margin: 25px 0 0 0;
 }
@@ -1661,6 +1677,7 @@ hr {
 .footer-container {
   padding-top: 10px;
   margin-top: 30px;
+  background: white;
 }
 
 footer {
@@ -1710,8 +1727,8 @@ footer {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.hover\:shadow-white:hover {
-  --tw-shadow-color: #fff;
+.hover\:shadow-black:hover {
+  --tw-shadow-color: #000;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
@@ -1899,6 +1916,11 @@ footer {
   .dark\:hover\:bg-\[\#333333\]:hover {
     --tw-bg-opacity: 1;
     background-color: rgb(51 51 51 / var(--tw-bg-opacity));
+  }
+
+  .dark\:hover\:shadow-white:hover {
+    --tw-shadow-color: #fff;
+    --tw-shadow: var(--tw-shadow-colored);
   }
 
   .dark\:focus\:border-blue-500:focus {
